controls for the player to move around the town added.The buttons are greyed out where the player cannot move. Also inhertiance has been implemented by adding basenotification class. this class contains the notifyproperty changed, game session takes this and uses , nameof() has been used so that name changed will show the effects as well.

--- a/WPFUI/WPFUI.csproj
+++ b/WPFUI/WPFUI.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Engine\Engine.csproj">
+      <Project>{a9282ebc-7d8d-4243-886b-c11ceddde4a3}</Project>
+      <Name>Engine</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
